<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="25dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/userpp"
            android:padding="1dp"
            />
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true">
            <!--            android:textColorHint="@color/colorPrimary">-->

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true">
            <!--            android:textColorHint="@color/colorPrimary">-->

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <!--            android:textColorHint="@color/colorPrimary">-->

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true">
            <!--            android:textColorHint="@color/colorPrimary">-->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true">
            <!--            android:textColorHint="@color/colorPrimary">-->

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Gender"
                android:textColor="#000000"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />
        </RadioGroup>
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_rounded"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:id="@+id/loginPage"
            android:layout_marginStart="20dp" />
    </LinearLayout>
</ScrollView>